# wrangled-production

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  build.ps1  build.sh  dev.ps1  dev.sh  docker-compose.yml  index.html  lint.sh  ruff.toml
.github/workflows/: aws-push.yml  deploy-site.yml  docker.yml
apps/api/: CLAUDE.md  Dockerfile  pyproject.toml
apps/api/src/api/: __init__.py  __main__.py  cli.py  discord_bot.py  discord_queue.py  matrix_mode.py  moderation.py  schedule_data.py  schedule_logic.py  settings.py
apps/api/src/api/server/: __init__.py  app.py  auth.py  connection.py  groups.py  hub.py  mod_routes.py  mode_routes.py  rest.py  schedule.py  stream.py  ws.py
apps/api/tests/: conftest.py  test_auth.py  test_content_filter.py  test_discord_queue.py  test_end_to_end.py  test_groups.py  test_hub.py  test_rest_metadata.py  test_rest_routing.py  test_server_app.py  test_stream.py  test_ws_handshake.py
apps/dashboard/: CLAUDE.md  index.html  package-lock.json  package.json  vite.config.js
apps/site/: index.html  styles.css
apps/wrangler/: CLAUDE.md  Dockerfile  pyproject.toml
apps/wrangler-ui/: CLAUDE.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
apps/wrangler/src/wrangler/: __init__.py  __main__.py  cli.py  hub_client.py  pusher.py  schedule_data.py  schedule_logic.py  settings.py
apps/wrangler/src/wrangler/scanner/: __init__.py  mdns.py  netinfo.py  probe.py  sweep.py
apps/wrangler/src/wrangler/server/: __init__.py  app.py  devices.py  metadata.py  registry.py  schedule.py  wled_client.py
apps/wrangler/tests/: conftest.py  test_cli.py  test_cli_send.py  test_hub_client.py  test_live.py  test_mdns.py  test_netinfo.py  test_probe.py  test_pusher.py  test_scan_integration.py  test_server_app.py  test_server_devices.py  test_server_metadata.py  test_server_registry.py  test_server_wled_client.py  test_sweep.py
apps/wrangler/tests/fixtures/: wled_info_v0_15.json
presentation/: package-lock.json  package.json  slides.md  vite.config.ts
scratch/: debug_preset.py
(+49 files in other folders)
