[project]
name = "wrangled-api"
version = "0.1.0"
description = "WrangLED central hub: routes commands to wranglers, serves dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "wrangled-contracts",
    "discord.py>=2.4",
    "tinydb>=4.8",
    "better-profanity>=0.7",
    "sse-starlette>=2.0",
]

[project.scripts]
api = "api.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/api"]

[tool.uv.sources]
wrangled-contracts = { path = "../../packages/contracts", editable = true }
wrangler = { path = "../wrangler", editable = true }

[tool.ruff]
extend = "../../ruff.toml"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
    "ruff>=0.5",
    "wrangler",
]
